--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,14 @@
 name: Test
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   deploy:
     name: Test
     if: "!contains(github.event.commits.*.message, '[skip ci]')"
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -18,3 +18,14 @@ jobs:
       - run: npm run check
       - run: npm run lint
       - run: npm run test:unit
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npm run test
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 5
