--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ server {
     listen       80;
 
     error_log stderr info;
+    access_log stderr;
 
     server_name  localhost;
     location / {
