--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,19 @@
-server {
-    listen       80;
+user  nginx;
+worker_processes  1;
 
-    error_log stderr info;
-    access_log stderr;
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
-    server_name  localhost;
-    location / {
-        root   /static;
-        index  index.html;
-    }
+events {
+    worker_connections  1024;
+}
 
-    error_page 404 /404.html;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+    access_log /var/log/nginx/access.log;
+    sendfile        on;
+    keepalive_timeout  65;
+    gzip  on;
+    include /etc/nginx/conf.d/*.conf;
 }
