--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,14 @@
-user  nginx;
-worker_processes  1;
+server {
+    listen       80;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+    access_log /dev/stdout;
+    error_log /dev/stderr;
 
-events {
-    worker_connections  1024;
-}
+    server_name  localhost;
+    location / {
+        root   /static;
+        index  index.html;
+    }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-    access_log /var/log/nginx/access.log;
-    sendfile        on;
-    keepalive_timeout  65;
-    gzip  on;
-    include /etc/nginx/conf.d/*.conf;
+    error_page 404 /404.html;
 }
