Custom path for health checking

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,13 @@ server {
     error_log /dev/stderr;
 
     server_name  localhost;
+
+    location /healthz {
+        access_log off;
+        add_header 'Content-Type' 'text/plain';
+        return 200 "healthy\n";
+    }
+
     location / {
         root   /static;
         index  index.html;
