Adding realip to nginx modules

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,19 @@
-server {
-    listen       80;
+user  nginx;
+worker_processes  1;
 
+error_log  /var/log/nginx/error.log info;
+pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
+}
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
     access_log /dev/stdout;
-    error_log /dev/stderr;
-
-    server_name  localhost;
-
-    location /healthz {
-        access_log off;
-        add_header 'Content-Type' 'text/plain';
-        return 200 "healthy\n";
-    }
-
-    location / {
-        root   /static;
-        index  index.html;
-    }
-
-    error_page 404 /404.html;
+    sendfile        on;
+    keepalive_timeout  65;
+    gzip  on;
+    include /etc/nginx/conf.d/*.conf;
 }
