Changing log configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,11 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-    access_log /dev/stdout;
+
     sendfile        on;
     keepalive_timeout  65;
     include /etc/nginx/conf.d/*.conf;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log warn;
 }
