--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,21 @@
-user  nginx;
-worker_processes  1;
+server {
+    set_real_ip_from  172.18.0.0/24;
+    real_ip_header    X-Forwarded-For;
 
-error_log  /var/log/nginx/error.log info;
-pid        /var/run/nginx.pid;
+    listen       80;
 
-events {
-    worker_connections  1024;
-}
+    server_name  localhost;
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    location /healthz {
+        access_log off;
+        add_header 'Content-Type' 'text/plain';
+        return 200 "healthy\n";
+    }
 
-    sendfile        on;
-    keepalive_timeout  65;
-    include /etc/nginx/conf.d/*.conf;
+    location / {
+        root   /static;
+        index  index.html;
+    }
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log warn;
+    error_page 404 /404.html;
 }
