--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "mishi",
   "version": "0.0.1",
   "description": "Mishi",
-  "productName": "Quasar AppMishi",
+  "productName": "Mishi",
   "author": "azarias.boutin <azarias.boutin@luxquanta.com>",
   "private": true,
   "scripts": {
+    "check:format" : "prettier --check \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
