--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-vue": "^9.15.0",
+    "gray-matter": "^4.0.3",
     "marked": "^5.1.0",
     "prettier": "^2.8.8",
     "typescript": "^5.1.3"
